--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Test</title>
+  <title>Advice Generator</title>
   
 </head>
 <body>
